--- a/RollingBall/Saved/Config/Windows/Engine.ini
+++ b/RollingBall/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../Users/acer/Documents/Unreal Projects/RollingBall/Content
+Paths=../../../../../../Irene/RollingBall/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
 
