[Udate]Fix Rotae Problem

--- a/GravityBall(Unreal)/Config/DefaultEngine.ini
+++ b/GravityBall(Unreal)/Config/DefaultEngine.ini
@@ -57,7 +57,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/RollingMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/RolloingGameMode.RolloingGameMode_C
+GlobalDefaultGameMode=/Game/RollingGameMode.RollingGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
