--- a/GravityBall(Unreal)/Config/DefaultInput.ini
+++ b/GravityBall(Unreal)/Config/DefaultInput.ini
@@ -19,7 +19,8 @@ bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
 -AxisMappings=(AxisName="MoveX",Key=Gamepad_LeftX,Scale=1.000000)
--AxisMappings=(AxisName="MoveY",Key=None,Scale=1.000000)
+-AxisMappings=(AxisName="MoveY",Key=Gamepad_LeftY,Scale=1.000000)
+-AxisMappings=(AxisName="NewAxisMapping_1",Key=None,Scale=1.000000)
 +AxisMappings=(AxisName="MoveX",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="MoveY",Key=Gamepad_LeftY,Scale=1.000000)
 bAlwaysShowTouchInterface=False
