--- a/GravityBall(Unreal)/Saved/Config/Windows/Engine.ini
+++ b/GravityBall(Unreal)/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../Users/acer/Documents/Unreal Projects/GravityBall/Content
+Paths=../../../../../../Irene/GravityBall(Unreal)/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
 
