--- a/GravityBall(Unreal)/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GravityBall(Unreal)/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -227,6 +227,7 @@ NewBlueprint_C.MouseInterface=True
 Feedback=True
 Feedback=True
 Feedback=True
+Feedback=True
 ObjectProperty.Variable=True
 ObjectProperty.DefaultValueCategory=True
 ObjectProperty.Events=True
@@ -262,7 +263,6 @@ StaticMesh.Collision=True
 StaticMesh.Navigation=True
 RolloingGameMode_C.TransformCommon=True
 RolloingControler_C.TransformCommon=True
-RolloingControler_C.Game|Feedback=True
 PlayerState.Actor=True
 PlayerCameraManager.TransformCommon=True
 PlayerCameraManager.Rendering=True
@@ -281,7 +281,7 @@ EditorStyleSettings.UserInterface=True
 TileMapEditorSettings.Background=True
 EditorTutorialSettings.Tutorials=True
 GameplayDebuggerSettings.GameplayDebugger=True
-GameplayDebuggerSettings.GameplayDebugger|EQS=True
+EQS=True
 EditorExperimentalSettings.Foliage=True
 EditorExperimentalSettings.Tools=True
 EditorExperimentalSettings.UserInterface=True
@@ -332,6 +332,7 @@ ContentBrowserTab1.CurrentViewType=1
 /Game/RolloingControler.RolloingControler=1
 /Game/RolloingGameMode.RolloingGameMode=1
 /Engine/MapTemplates/SM_Template_Map_Floor.SM_Template_Map_Floor=1
+/Game/RollingGameMode.RollingGameMode=1
 
 [MaterialEditor]
 LightDir=P=-39.999996 Y=27.500000 R=0.000000
@@ -339,7 +340,7 @@ PrimType=1
 
 [RootWindow]
 ScreenPosition=X=253.000 Y=27.000
-WindowSize=X=1300.000 Y=700.000
+WindowSize=X=1310.000 Y=710.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -784,8 +785,8 @@ WorldSettings=
 Info=
 
 [DetailCustomWidgetExpansion]
-InputSettings=InputSettings.Bindings.AxisMappings.MoveX,InputSettings.Bindings.AxisMappings.MoveY,
+InputSettings=InputSettings.Bindings.AxisMappings.MoveX,InputSettings.Bindings.AxisMappings.MoveY,InputSettings.Bindings.AxisMappings,
 GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-WorldSettings=WorldSettings.Lightmass.Lightmaps,
+WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
 
 
