[Update] Increase the speed of ball

--- a/GravityBall(Unreal)/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GravityBall(Unreal)/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,6 +76,7 @@ TutorialsProgress=(Tutorial=/Engine/Tutorial/BlueprintTutorials/BlueprintEditorT
 bDismissedAllTutorials=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Material/M_Metal_Rust.M_Metal_Rust;
 RecentlyPlaced=/Game/Ball.Ball;
 RecentlyPlaced=/Game/RolloingGameMode.RolloingGameMode;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
@@ -315,7 +316,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Material
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -340,7 +341,7 @@ PrimType=1
 
 [RootWindow]
 ScreenPosition=X=253.000 Y=27.000
-WindowSize=X=1310.000 Y=710.000
+WindowSize=X=1340.000 Y=740.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -788,5 +789,8 @@ Info=
 InputSettings=InputSettings.Bindings.AxisMappings.MoveX,InputSettings.Bindings.AxisMappings.MoveY,InputSettings.Bindings.AxisMappings,
 GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
+
+[MessageLog]
+LastLogListing=LoadErrors
 
 
